# mailing_service_project

./: .env.example  README.md  db.sqlite3  manage.py  pyproject.toml
mailing/: admin.py  context_processors.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: create_manager.py  create_managers_group.py  create_test_data.py  debug_data.py  send_mailing.py
mailing/migrations/: 0001_initial.py  0002_alter_client_options_alter_mailing_options_and_more.py
mailing_service/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/mailing/: client_confirm_delete.html  client_form.html  client_list.html  index.html  mailing_confirm_delete.html  mailing_form.html  mailing_list.html  mailing_send_confirm.html  message_confirm_delete.html  message_form.html  message_list.html
templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  profile_edit.html  profile_view.html  register.html  user_list.html
users/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_emailverification.py
