[tool.poetry]
name = "mailing-service-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.7"
python-dotenv = "^1.2.1"
pillow = "^12.0.0"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
